--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
-{"name": "phstore",
-"version": "0.1.0",
-"private": true,
-"main": "index.js", 
-"dependencies": {
-  "@cryptapi/api": "^1.1.0",
-  "cors": "^2.8.5",
-  "express": "^4.19.2",
-  "mysql": "^2.18.1",
-  "mysql2": "^3.6.2",
-  "dotenv": "^16.4.5" 
-},
+{
+  "name": "phstore",
+  "version": "0.1.0",
+  "private": true,
+  "main": "index.js",
+  "dependencies": {
+    "@cryptapi/api": "^1.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.2",
+    "dotenv": "^16.4.5"
+  },
   "scripts": {
-
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
