--- a/package.json
+++ b/package.json
@@ -2,14 +2,47 @@
   "name": "phstore",
   "version": "0.1.0",
   "private": true,
-  "main": "index.js",
   "dependencies": {
     "@cryptapi/api": "^1.1.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
+    "axios": "^1.7.2",
+    "bootstrap": "^5.3.1",
+    "browserify-zlib": "^0.2.0",
     "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "file-saver": "^2.0.5",
+    "install": "^0.13.0",
+    "lodash": "^4.17.21",
+    "mdb-react-ui-kit": "^8.0.0",
+    "mdbreact": "^5.2.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.2",
-    "dotenv": "^16.4.5"
+    "node-polyfill-webpack-plugin": "^4.0.0",
+    "npm": "^10.1.0",
+    "path-browserify": "^1.0.1",
+    "phstore": "file:",
+    "querystring-es3": "^0.2.1",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
+    "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.5",
+    "react-router-dom": "^6.16.0",
+    "react-scripts": "5.0.1",
+    "sequelize": "^6.33.0",
+    "sqlite3": "^5.1.6",
+    "stream-browserify": "^3.0.0",
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
